added html framework

--- a/index3.html
+++ b/index3.html
@@ -1,3 +1,24 @@
-<h1>This is my style guide</h1>
+<!DOCTYPE html>
 
-<p>I'm just so excited and I just can't hide it.</p>
+<html>
+
+<head>
+
+
+</head>
+
+
+<body>
+    <h1>This is my style guide</h1>
+
+    <p>I'm just so excited and I just can't hide it.</p>
+
+</body>
+</html>
+
+
+
+
+
+
+
