added css and other stuff

--- a/index3.html
+++ b/index3.html
@@ -4,6 +4,11 @@
 
 <head>
 
+<title>My new webpage</title>
+
+<meta> name="discription" content="This is my awesome content of my webpage">
+
+<link rel="stylesheet" href="resources/css/style.css">
 
 </head>
 
