added page structure into github

--- a/index3.html
+++ b/index3.html
@@ -20,9 +20,15 @@
 
 
 <body>
-    <h1>This is my style guide</h1>
+ 
+    <header>
+
+      <h1>This is my style guide</h1>
 
     <p>I'm just so excited and I just can't hide it.</p>
+
+    </header>
+    <main>
 
     <section class="content">
         <h1>Site elements</h1>
@@ -396,6 +402,12 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </section>
 
+    </main>
+
+    <footer>This is my footer 
+
+    </footer>
+    
 </body>
 </html>
 
