added content sections and base styles

--- a/index3.html
+++ b/index3.html
@@ -23,9 +23,13 @@
  
     <header>
 
+      <section class="content">
+
       <h1>This is my style guide</h1>
 
     <p>I'm just so excited and I just can't hide it.</p>
+
+  </section> 
 
     </header>
     <main>
@@ -404,10 +408,13 @@
 
     </main>
 
-    <footer>This is my footer 
+    <footer>
 
+      <section class="content">
+      <p>This is my footer</p> 
+    </section>
     </footer>
-    
+
 </body>
 </html>
 
