changed some fonts

--- a/index3.html
+++ b/index3.html
@@ -8,7 +8,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta> name="discription" content="This is my awesome content of my webpage">
+<meta> 
 
 <link rel="stylesheet" href="resources/css/normalize.css">
 
@@ -405,6 +405,7 @@
         <h3>Barcelona</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </section>
+
 
     </main>
 
