changed some fonts

--- a/index3.html
+++ b/index3.html
@@ -12,7 +12,7 @@
 
 <link rel="stylesheet" href="resources/css/normalize.css">
 
-<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gothic+A1:300,600|Playfair+Display" rel="stylesheet">
 
 <link rel="stylesheet" href="resources/css/style.css">
 
@@ -370,6 +370,7 @@
           Your browser does not support the video tag. I suggest you upgrade your
           browser.
         </video>
+
       
         <h2>Some headings in context</h2>
       
