--- a/index.html
+++ b/index.html
@@ -292,8 +292,15 @@
 
         <h4>Another image</h4>
 
-        <img src="resources/images/woman-in-orange-top-2439563.jpg" alt="Woman in orange">
-      
+        <img src="resources/images/woman-in-orange-top-2439563.jpg" alt="Woman in orange top">
+
+        <h4>Different sized images</h4>        
+
+        <img src="resources/images/woman-in-orange-top-2439563.jpg" alt="Woman in orange top" width="427px" height="640px">
+
+
+
+
         <h2 class="">Embedded iFrames</h2>
       
         <h3>Google map iframe</h3>
