--- a/index.html
+++ b/index.html
@@ -426,7 +426,15 @@
 
           <a href="https://www.google.com">A link</a>
         </div>
-     
+
+        <div class="news-component news-component-offset">
+        <h2> This is the news item</h2>
+
+        <img src="resources/images/woman-in-orange-top-thumbnail.jpg" alt="Woman in orange top" width="427px" height="640px">
+
+        <p> Some text</p>
+
+        <a href="https://www.google.com">A link</a>
       </section>
 
 
