added header html

--- a/index.html
+++ b/index.html
@@ -25,9 +25,18 @@
 
       <section class="content">
 
-      <h1>This is my style guide</h1>
+      <div class="header-logo">
+        <a href="index.html">
 
-    <p>I'm just so excited and I just can't hide it.</p>
+        <img src="resources/images/woman-wearing-turban-while-sitting-on-bed" alt="company name">
+      </a>
+      </div>
+
+      <div class="header-text">
+      <div class="header-heading">My Company name</div>
+
+  <div class="header-sub-heading">We do stuff</div>
+  </div>
 
   </section> 
 
