--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
   </section> 
 
     </header>
-    <nav>
-      <ul>
+
+    <nav class="navigation">
+      <ul class="content">
         <li>
-          <a href="#embedded-content">Embedded content section</a>
+          <a href="index.html">Home</a>
         </li>
 
         <li>
-          <a href="#embedded-iframes">Embedded iframes section</a>
+          <a href="about.html">About Us</a>
         </li>
-
+        <a href="contact.html">Contact Us</a>
       </ul>
     </nav>
     <main>
@@ -503,7 +504,7 @@
     <footer>
 
       <section class="content">
-      <p>This is my footer</p> 
+      <p>&copy; Copyright 2020 Megan Barnard</p> 
     </section>
     </footer>
 
