--- a/contact.html
+++ b/contact.html
@@ -55,12 +55,14 @@
         <li>
           <a href="style-guide.html">Style Guide</a>
         </li>
+
       </ul>
+
     </nav>
     <main>
 
 <section class="content">
-  Home page
+  Contact Page
 </section>
 
 
