--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,15 @@
     <main>
 
 <section class="content">
-  Contact Page
+
+<h1>Contact Page</h1>
+<div class="news-component news-component-columns">
+
+  <div class="news-content">
+    <p>Hi</p>
+  <P>Email me</P>
+  </div>
+
 </section>
 
 
