Background colours, altered fonts

--- a/style-guide.html
+++ b/style-guide.html
@@ -33,9 +33,9 @@
       </div>
 
       <div class="header-text">
-      <div class="header-heading">My Company name</div>
+      <div class="header-heading">VAGINISMUS</div>
 
-  <div class="header-sub-heading">We do stuff</div>
+  <div class="header-sub-heading">awareness website</div>
   </div>
 
   </section> 
@@ -498,6 +498,8 @@
         </div><!-- news-component-columns-->
 
       </div>
+
+
 
       </section>
 
