--- a/test.html
+++ b/test.html
@@ -54,12 +54,15 @@
         <li>
           <a href="style-guide.html">Style Guide</a>
         </li>
+        <li>
+          <a href="test.html">Test Page</a>
+        </li>
       </ul>
     </nav>
     <main>
 
 <section class="content">
-  Home page
+  Test page
 </section>
 
 
