blog page, hover greyscale, text on image homepage

--- a/about.html
+++ b/about.html
@@ -60,11 +60,25 @@
     <main>
 
 <section class="content">
-  About Page
-</section>
+
+  <h1>Personal Stories</h1>
+
+  <div class="container">
 
 
-    </main>
+    <a href="https://www.collarts.edu.au"><img src="resources/blogimages/photo1.jpg" alt="Blonde woman looking out to pier"><h3>Erika's Story</h3><p>1 January 2020</p><P>This is a description of the story</P></a>
+
+    <a href="https://www.collarts.edu.au"><img src="resources/blogimages/photo2.jpg" alt="Blonde woman looking out to pier"><h3>Erika's Story</h3><p>1 January 2020</p></a> 
+
+    <a href="https://www.collarts.edu.au"><img src="resources/blogimages/photo3.jpg" alt="Blonde woman looking out to pier"><h3>Erika's Story</h3><p>1 January 2020</p></a>
+
+    <a href="https://www.collarts.edu.au"><img src="resources/blogimages/photo4.jpg" alt="Blonde woman looking out to pier"><h3>Erika's Story</h3><p>1 January 2020</p></a>
+
+    <a href="https://www.collarts.edu.au"><img src="resources/blogimages/photo5.jpg" alt="Blonde woman looking out to pier"><h3>Erika's Story</h3><p>1 January 2020</p></a>
+
+    <a href="https://www.collarts.edu.au"><img src="resources/blogimages/photo3.jpg" alt="Blonde woman looking out to pier"><h3>Erika's Story</h3><p>1 January 2020</p></a>
+
+</div>
 
     <footer>
 
