--- a/home.html
+++ b/home.html
@@ -60,8 +60,20 @@
     </nav>
     <main>
 
-<section class="content">
-  Home page
+<section class="hero-module">
+
+  <img src="resources/images/websiteheader.jpg"
+  alt="woman sitting on cliff looking at ocean">
+
+<div class="hero-content">
+
+<h1 class="heading-main content">
+Welcome
+</h1>
+
+</div>
+
+
 </section>
 
 
