--- a/style-guide.html
+++ b/style-guide.html
@@ -28,7 +28,7 @@
       <div class="header-logo">
         <a href="index.html">
 
-        <img src="resources/images/woman-wearing-turban-while-sitting-on-bed" alt="company name">
+        <img src="resources/images/websiteheader.jpg" alt="back of woman wearing white shirt overlooking the ocean">
       </a>
       </div>
 
@@ -498,7 +498,6 @@
         </div><!-- news-component-columns-->
 
       </div>
-
 
 
       </section>
