--- a/homeoriginal.html
+++ b/homeoriginal.html
@@ -28,14 +28,14 @@
       <div class="header-logo">
         <a href="index.html">
 
-        <img src="resources/images/logo.jpg" alt="logo image of pink watercolour mark on white square">
+        <img src="resources/images/woman-wearing-turban-while-sitting-on-bed" alt="company name">
       </a>
       </div>
 
       <div class="header-text">
-      <div class="header-heading">VAGINISMUS</div>
+      <div class="header-heading">My Company name</div>
 
-  <div class="header-sub-heading">awareness website</div>
+  <div class="header-sub-heading">We do stuff</div>
   </div>
 
   </section> 
@@ -49,12 +49,10 @@
         </li>
 
         <li>
-          <a href="about.html">About</a>
+          <a href="about.html">About Us</a>
         </li>
-        <a href="contact.html">Contact</a>
-        <li>
-          <a href="blog.html">Blog</a>
-        </li>
+        <a href="contact.html">Contact Us</a>
+
         <li>
           <a href="style-guide.html">Style Guide</a>
         </li>
@@ -62,16 +60,21 @@
     </nav>
     <main>
 
-      <div class="news-component">
-        <h2> This is the news item</h2>
+<section class="hero-module">
 
-        <img src="resources/images/woman-in-orange-top-thumbnail.jpg" alt="Woman in orange top" width="427px" height="640px">
+  <img src="resources/images/websiteheader.jpg"
+  alt="woman sitting on cliff looking at ocean">
 
-        <p> Some text</p>
+<div class="hero-content">
 
-        <a href="https://www.google.com">A link</a>
-        
-      </div>
+<h1 class="heading-main content">
+Welcome
+</h1>
+
+</div>
+
+
+</section>
 
 
     </main>
