--- a/style-guide.html
+++ b/style-guide.html
@@ -28,7 +28,7 @@
       <div class="header-logo">
         <a href="index.html">
 
-        <img src="resources/images/websiteheader.jpg" alt="back of woman wearing white shirt overlooking the ocean">
+        <img src="resources/images/logo.jpg" alt="logo image of pink watercolour mark on white square">
       </a>
       </div>
 
@@ -45,21 +45,23 @@
     <nav class="navigation">
       <ul class="content">
         <li>
-          <a href="index.html">Home</a>
+          <a href="home.html">Home</a>
         </li>
 
         <li>
-          <a href="about.html">About Us</a>
+          <a href="about.html">About</a>
         </li>
-        <a href="contact.html">Contact Us</a>
+        <a href="contact.html">Contact</a>
+        <li>
+          <a href="blog.html">Personal Stories</a>
+        </li>
         <li>
           <a href="style-guide.html">Style Guide</a>
         </li>
       </ul>
     </nav>
     <main>
-
-    <section class="content">
+      <section class="content">
         <h1>Site elements</h1>
       
         <h2>Typography</h2>
@@ -501,6 +503,7 @@
 
 
       </section>
+   
 
 
     </main>
