--- a/aboutnew.html
+++ b/aboutnew.html
@@ -62,15 +62,15 @@
     </nav>
     <main>
 
-      <div class="news-component">
-        <h2> This is the news item</h2>
+      <div class="news-component news-component-columns">
 
-        <img src="resources/images/woman-in-orange-top-thumbnail.jpg" alt="Woman in orange top" width="427px" height="640px">
+        <div class="news-content">
+          <p>Hi there :-)</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi imperdiet consequat aliquet. Nam fermentum viverra magna, non condimentum odio. Aliquam eu auctor est, scelerisque maximus nisl. Pellentesque pellentesque, neque id tristique luctus, risus turpis efficitur sapien, vel volutpat tellus mi quis quam. Nulla non magna sed tellus vestibulum commodo id eu mauris. Cras pellentesque sem in molestie imperdiet. Ut congue, elit vitae lobortis viverra, orci dolor facilisis enim, sed sodales sem diam et nisl. Nunc sodales sem at arcu efficitur, in condimentum sapien cursus. Vestibulum scelerisque hendrerit erat sit amet maximus.</p>
+        </div>
 
-        <p> Some text</p>
+        <img src="resources/images/woman-in-orange-top-thumbnail.jpg" alt="Woman in orange top">
 
-        <a href="https://www.google.com">A link</a>
-        
       </div>
 
 
