altered navigation bar links

--- a/aboutnew.html
+++ b/aboutnew.html
@@ -45,34 +45,39 @@
     <nav class="navigation">
       <ul class="content">
         <li>
-          <a href="index.html">Home</a>
+          <a href="home.html">Home</a>
         </li>
 
         <li>
-          <a href="about.html">About</a>
+          <a href="aboutnew.html">About</a>
         </li>
         <a href="contact.html">Contact</a>
         <li>
-          <a href="blog.html">Blog</a>
+          <a href="blog.html">Personal Stories</a>
         </li>
         <li>
           <a href="style-guide.html">Style Guide</a>
+        </li>
+        <li>
+          <a href="blogarticle.html">Blog Article Example</a>
         </li>
       </ul>
     </nav>
     <main>
 
+      <section class="content">
+
+      <h1>About this page</h1>
+
       <div class="news-component news-component-columns">
 
         <div class="news-content">
-          <p>Hi there :-)</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi imperdiet consequat aliquet. Nam fermentum viverra magna, non condimentum odio. Aliquam eu auctor est, scelerisque maximus nisl. Pellentesque pellentesque, neque id tristique luctus, risus turpis efficitur sapien, vel volutpat tellus mi quis quam. Nulla non magna sed tellus vestibulum commodo id eu mauris. Cras pellentesque sem in molestie imperdiet. Ut congue, elit vitae lobortis viverra, orci dolor facilisis enim, sed sodales sem diam et nisl. Nunc sodales sem at arcu efficitur, in condimentum sapien cursus. Vestibulum scelerisque hendrerit erat sit amet maximus.</p>
+          <p>What is vaginismus?</p>
+          <p>This is a concept website to raise awareness of vaginismus. Vaginismus is a condition involving a muscle spasm in the pelvic floor muscles. It can make it painful, difficult, or impossible to have sexual intercourse, to undergo a gynecological exam, and to insert a tampon. Despite being a reasonably common condition many people haven not heard of it. If expanded further, this section of the website would detail what vaginismus is and how it is caused. 
+            </p>
         </div>
 
-        <img src="resources/images/woman-in-orange-top-thumbnail.jpg" alt="Woman in orange top">
-
-      </div>
-
+        <img src="resources/images/me.jpg" alt="Photo of woman sitting against window wearing a black turtleneck">
 
     </main>
 
