--- a/blogarticle.html
+++ b/blogarticle.html
@@ -47,11 +47,11 @@
     <nav class="navigation">
       <ul class="content">
         <li>
-          <a href="index.html">Home</a>
+          <a href="home.html">Home</a>
         </li>
 
         <li>
-          <a href="about.html">About</a>
+          <a href="aboutnew.html">About</a>
         </li>
         <a href="contact.html">Contact</a>
         <li>
@@ -59,6 +59,9 @@
         </li>
         <li>
           <a href="style-guide.html">Style Guide</a>
+        </li>
+        <li>
+          <a href="blogarticle.html">Blog Article Example</a>
         </li>
       </ul>
     </nav>
