--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,7 @@
         </li>
 
         <li>
-          <a href="about.html">About</a>
+          <a href="aboutnew.html">About</a>
         </li>
         <a href="contact.html">Contact</a>
         <li>
@@ -57,6 +57,9 @@
         </li>
         <li>
           <a href="style-guide.html">Style Guide</a>
+        </li>
+        <li>
+          <a href="blogarticle.html">Blog Article Example</a>
         </li>
       </ul>
     </nav>
