--- a/blogarticle.html
+++ b/blogarticle.html
@@ -37,7 +37,7 @@
       <div class="header-text">
       <div class="header-heading">VAGINISMUS</div>
 
-  <div class="header-sub-heading">awareness website</div>
+  <div class="header-sub-heading">Awareness Website</div>
   </div>
 
   </section> 
