--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
       <div class="header-text">
       <div class="header-heading">VAGINISMUS</div>
 
-  <div class="header-sub-heading">awareness website</div>
+  <div class="header-sub-heading">Awareness Website</div>
   </div>
 
   </section> 
