fixed up about page
i messed up the about page

--- a/aboutnew.html
+++ b/aboutnew.html
@@ -67,17 +67,23 @@
 
       <section class="content">
 
-      <h1>About this page</h1>
-
-      <div class="news-component news-component-columns">
-
-        <div class="news-content">
-          <p>What is vaginismus?</p>
-          <p>This is a concept website to raise awareness of vaginismus. Vaginismus is a condition involving a muscle spasm in the pelvic floor muscles. It can make it painful, difficult, or impossible to have sexual intercourse, to undergo a gynecological exam, and to insert a tampon. Despite being a reasonably common condition many people haven not heard of it. If expanded further, this section of the website would detail what vaginismus is and how it is caused. 
+        <h1>About</h1>
+        <div class="news-component news-component-columns">
+  
+          <div class="news-content">
+  
+            <p>This is a concept website to raise awareness of vaginismus. </p>
+            <p>Vaginismus is a condition involving a muscle spasm in the pelvic floor muscles. It can make it painful, difficult, or impossible to have sexual intercourse, to undergo a gynecological exam, and to insert a tampon. Despite being a reasonably common condition many people haven not heard of it. If expanded further, this section of the website would detail what vaginismus is and how it is caused.
             </p>
-
-        <img src="resources/images/me.jpg" alt="Photo of woman sitting against window wearing a black turtleneck">
-
+            <p>Maecenas a dolor at justo lobortis tempus id a augue. Nullam lobortis, massa eget sollicitudin vulputate, enim dui fermentum lacus, eget facilisis felis dolor sed nunc. Sed aliquam ultrices ipsum, a maximus dui tempor non.
+            </p>
+  
+          </div>
+  
+          <img src="resources/images/me.jpg" alt="Woman in black turtleneck sitting against window">
+  
+        </div>
+      </section>
         
     </main>
 
