--- a/aboutnew.html
+++ b/aboutnew.html
@@ -71,6 +71,8 @@
         <div class="news-component news-component-columns">
   
           <div class="news-content">
+
+          <h2>What is vaginismus?</h2>
   
             <p>This is a concept website to raise awareness of vaginismus. </p>
             <p>Vaginismus is a condition involving a muscle spasm in the pelvic floor muscles. It can make it painful, difficult, or impossible to have sexual intercourse, to undergo a gynecological exam, and to insert a tampon. Despite being a reasonably common condition many people haven not heard of it. If expanded further, this section of the website would detail what vaginismus is and how it is caused.
