fixed up logo image link

--- a/blogarticle.html
+++ b/blogarticle.html
@@ -28,7 +28,7 @@
       <section class="content">
 
       <div class="header-logo">
-        <a href="index.html">
+        <a href="home.html">
 
         <img src="resources/images/logo.jpg" alt="logo image of pink watercolour mark on white square">
       </a>
